update user account

--- a/footer.html
+++ b/footer.html
@@ -70,7 +70,7 @@
 </style>
 <body>
 
-    <div class="footer">
+    <footer class="footer">
 
     
     <div class="footerContainer">
@@ -106,6 +106,6 @@
    
         <p class="copyright">@2024 Company Name.All rights reserved</p>
 
-    </div>
+    </footer>
 </body>
 </html>
