--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
         padding: 0;
     }
     .footer{
-        background-color: black;
+        background-color: #153448;
         color: white;
         padding: 1px;
     }
