--- a/nav-bar.html
+++ b/nav-bar.html
@@ -31,6 +31,9 @@
             padding:8px 20px;
             border-radius: 10px;
             cursor: pointer;
+            background-color: #3C5B6F;
+            border: none;
+            color: white;
         }
         
     </style>
